# zephyr

drivers/sensor/: CMakeLists.txt  Kconfig  sensor_shell.c
drivers/sensor/aht21/: CMakeLists.txt  Kconfig  aht21.c  aht21.h
drivers/sensor/bmp388/: bmp388.h
drivers/sensor/ens160/: CMakeLists.txt  Kconfig  ens160.c  ens160.h
dts/bindings/sensor/: ams,ens160.yaml  ams,ens210.yaml  aosong,aht21.yaml
include/zephyr/drivers/: sensor.h
samples/sensor/ens160_ath2x_board/: CMakeLists.txt  README.rst  app.overlay  prj.conf  sample.yaml
samples/sensor/ens160_ath2x_board/src/: main.c
